--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+# Core dependencies from Marton's code
 numpy==1.26.4
 pi-plates==10.5
-pip==25.0
-setuptools==75.8.0
 websockets==10.4
-wheel==0.45.1
+
+# LCD and GPIO dependencies
+RPLCD==1.3.1
+smbus2==0.4.3
+RPi.GPIO==0.7.1
+
+# Development dependencies
+pytest==7.4.4
+pytest-asyncio==0.23.5
