--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Core dependencies from Marton's code
+# Core dependencies
 numpy==1.26.4
 pi-plates==10.5
 websockets==10.4
@@ -6,7 +6,7 @@ scipy==1.15.1
 aiofiles==24.1.0
 typeguard==4.4.2
 
-# LCD and GPIO dependencies
+# RPI dependencies
 RPLCD==1.3.1
 smbus2==0.4.3
 RPi.GPIO==0.7.1
